--- a/templates/view_result.html
+++ b/templates/view_result.html
@@ -9,7 +9,7 @@
         font-family: 'Arial', sans-serif;
         background-color: #ffffff;
         background-image: radial-gradient(circle, #4CAF50 1px, transparent 1px);
-        background-size: 20px 20px; /* Jarak antar titik */
+        background-size: 20px 20px; 
         margin: 0;
         padding: 20px;
         color: #333;
@@ -60,8 +60,8 @@
 
     .download-button {
         display: flex;
-        justify-content: center; /* Agar tombol berada di tengah */
-        gap: 10px; /* Jarak antar tombol */
+        justify-content: center;
+        gap: 10px; 
         margin-top: 20px;
     }
 
